@@ -13,6 +13,13 @@ runsv "${ctmp}" &
 sleep 1
 test -r "${ctmp}"/supervise/stat || sleep 2
 cat "${ctmp}"/supervise/stat
+mkdir -p "${ctmp}"/control
+echo '#!/bin/sh' >"${ctmp}"/control/t
+echo 'echo term' >>"${ctmp}"/control/t
+echo 'exit 1' >>"${ctmp}"/control/t
+chmod 700 "${ctmp}"/control/t
+echo t >"${ctmp}"/supervise/control
+sleep 2
 echo x >"${ctmp}"/supervise/control
 wait
 echo $?
@@ -24,6 +31,13 @@ chmod 700 "${ctmp}"/log/run
 runsv "${ctmp}" &
 sleep 1
 test -r "${ctmp}"/log/supervise/stat || sleep 2
+mkdir -p "${ctmp}"/control
+echo '#!/bin/sh' >"${ctmp}"/control/i
+echo 'echo no interrupt' >>"${ctmp}"/control/i
+echo 'exit 0' >>"${ctmp}"/control/i
+chmod 700 "${ctmp}"/control/i
+echo i >"${ctmp}"/supervise/control
+sleep 1
 echo x >"${ctmp}"/supervise/control
 wait
 echo $?
